tests/algorithms/x/C/graphs/breadth_first_search_2.error
compile: exit status 1
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_2.c: In function ‘breadth_first_search’:
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_2.c:150:31: error: ‘graph_lens’ undeclared (first use in this function)
  150 |         size_t children_len = graph_lens[v];
      |                               ^~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_2.c:150:31: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_2.c: In function ‘breadth_first_search_with_deque’:
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_2.c:182:31: error: ‘graph_lens’ undeclared (first use in this function)
  182 |         size_t children_len = graph_lens[v];
      |                               ^~~~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_2.c: In function ‘main’:
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_2.c:207:36: error: initializer element is not constant
  207 |         static void* G_vals[22] = {G_vals_0, G_vals_1, G_vals_2, G_vals_3, G_vals_4, G_vals_5};
      |                                    ^~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_2.c:207:36: note: (near initialization for ‘G_vals[0]’)
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_2.c:207:46: error: initializer element is not constant
  207 |         static void* G_vals[22] = {G_vals_0, G_vals_1, G_vals_2, G_vals_3, G_vals_4, G_vals_5};
      |                                              ^~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_2.c:207:46: note: (near initialization for ‘G_vals[1]’)
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_2.c:207:56: error: initializer element is not constant
  207 |         static void* G_vals[22] = {G_vals_0, G_vals_1, G_vals_2, G_vals_3, G_vals_4, G_vals_5};
      |                                                        ^~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_2.c:207:56: note: (near initialization for ‘G_vals[2]’)
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_2.c:207:66: error: initializer element is not constant
  207 |         static void* G_vals[22] = {G_vals_0, G_vals_1, G_vals_2, G_vals_3, G_vals_4, G_vals_5};
      |                                                                  ^~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_2.c:207:66: note: (near initialization for ‘G_vals[3]’)
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_2.c:207:76: error: initializer element is not constant
  207 |         static void* G_vals[22] = {G_vals_0, G_vals_1, G_vals_2, G_vals_3, G_vals_4, G_vals_5};
      |                                                                            ^~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_2.c:207:76: note: (near initialization for ‘G_vals[4]’)
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_2.c:207:86: error: initializer element is not constant
  207 |         static void* G_vals[22] = {G_vals_0, G_vals_1, G_vals_2, G_vals_3, G_vals_4, G_vals_5};
      |                                                                                      ^~~~~~~~
/workspace/mochi/tests/algorithms/x/C/graphs/breadth_first_search_2.c:207:86: note: (near initialization for ‘G_vals[5]’)
