tests/algorithms/x/C/graphs/breadth_first_search_2.c
// Generated by Mochi 0.10.32 on 2025-08-14 09:53 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t breadth_first_search_len;
size_t breadth_first_search_with_deque_len;

size_t _slice_str_len;
static int contains_str(const char *arr[], size_t len, const char *val) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(arr[i], val) == 0) return 1;
    }
    return 0;
}

static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

typedef struct { const char **keys; void **vals; size_t *lens; size_t len; size_t cap; } MapSL;

typedef struct { const char **keys; int *vals; size_t len; size_t cap; } MapSI;

static int map_get_si(const char *keys[], const int vals[], size_t len, const char *key) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) return vals[i];
    }
    return 0;
}

static void map_set_si(MapSI *m, const char *key, int val) {
    for (size_t i = 0; i < m->len; i++) {
        if (strcmp(m->keys[i], key) == 0) { m->vals[i] = val; return; }
    }
    if (m->len >= m->cap) {
        m->cap = m->cap ? m->cap * 2 : 16;
        m->keys = realloc((void*)m->keys, m->cap * sizeof(char*));
        m->vals = realloc(m->vals, m->cap * sizeof(int));
    }
    m->keys[m->len] = key; m->vals[m->len] = val; m->len++;
}

static void* map_get_sl(const char *keys[], void *vals[], const size_t lens[], size_t len, const char *key, size_t *out_len) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) { if (out_len) *out_len = lens[i]; return vals[i]; }
    }
    if (out_len) *out_len = 0;
    return NULL;
}

static const char** list_append_str(const char **arr, size_t *len, const char *val) {
    arr = realloc((void*)arr, (*len + 1) * sizeof(char*));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static const char** _slice_str(const char **arr, size_t len, int start, int end, size_t *out_len) {
    if (start < 0) start = 0;
    if ((size_t)end > len) end = len;
    if (start > end) start = end;
    size_t n = end - start;
    const char **res = NULL;
    if (n) {
        res = malloc(n * sizeof(const char*));
        memcpy(res, arr + start, n * sizeof(const char*));
    }
    *out_len = n;
    _slice_str_len = n;
    return res;
}

const char* join(const char* * xs, size_t xs_len);
const char* * breadth_first_search(MapSL graph, const char* start);
const char* * breadth_first_search_with_deque(MapSL graph, const char* start);
int main(void);

const char* join(const char* * xs, size_t xs_len) {
    const char* s = "";
    long long i = 0LL;
    while (i < xs_len) {
        s = str_concat(s, xs[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})]);
        i = i + 1LL;
    }
    return s;
}

const char* * breadth_first_search(MapSL graph, const char* start) {
    static const char* explored_keys[16] = {};
    static int explored_vals[16] = {};
    size_t explored_len = 0;
    MapSI explored = { explored_keys, explored_vals, 0, 16 };
    map_set_si(&explored, start, 1LL);
    const char* *result = NULL;
    size_t result_len = 0;
    result = list_append_str(result, &result_len, start);
    const char* *queue = NULL;
    size_t queue_len = 0;
    queue = list_append_str(queue, &queue_len, start);
    while (queue_len > 0LL) {
        const char* v = queue[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? queue_len + _mochi_idx : _mochi_idx;})];
        queue = _slice_str(queue, queue_len, 1LL, queue_len, &(_slice_str_len));
        queue_len = _slice_str_len;
        const char* *children = map_get_sl(graph.keys, graph.vals, graph.lens, graph.len, v, NULL);
        size_t children_len = graph_lens[v];
        long long i = 0LL;
        while (i < children_len) {
            const char* w = children[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? children_len + _mochi_idx : _mochi_idx;})];
            if (!(contains_str(explored.keys, explored.len, w))) {
                map_set_si(&explored, w, 1LL);
                result = list_append_str(result, &result_len, w);
                queue = list_append_str(queue, &queue_len, w);
            }
            i = i + 1LL;
        }
    }
    return breadth_first_search_len = result_len, result;
}

const char* * breadth_first_search_with_deque(MapSL graph, const char* start) {
    static const char* visited_keys[16] = {};
    static int visited_vals[16] = {};
    size_t visited_len = 0;
    MapSI visited = { visited_keys, visited_vals, 0, 16 };
    map_set_si(&visited, start, 1LL);
    const char* *result = NULL;
    size_t result_len = 0;
    result = list_append_str(result, &result_len, start);
    const char* *queue = NULL;
    size_t queue_len = 0;
    queue = list_append_str(queue, &queue_len, start);
    long long head = 0LL;
    while (head < queue_len) {
        const char* v = queue[(int)({long long _mochi_idx = head; _mochi_idx < 0 ? queue_len + _mochi_idx : _mochi_idx;})];
        head = head + 1LL;
        const char* *children = map_get_sl(graph.keys, graph.vals, graph.lens, graph.len, v, NULL);
        size_t children_len = graph_lens[v];
        long long i = 0LL;
        while (i < children_len) {
            const char* child = children[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? children_len + _mochi_idx : _mochi_idx;})];
            if (!(contains_str(visited.keys, visited.len, child))) {
                map_set_si(&visited, child, 1LL);
                result = list_append_str(result, &result_len, child);
                queue = list_append_str(queue, &queue_len, child);
            }
            i = i + 1LL;
        }
    }
    return breadth_first_search_with_deque_len = result_len, result;
}

int main(void) {
    {
        long long __start = _now();
        static const char* G_keys[22] = {"A", "B", "C", "D", "E", "F"};
        const char* G_vals_0[2] = {"B", "C"};
        const char* G_vals_1[3] = {"A", "D", "E"};
        const char* G_vals_2[2] = {"A", "F"};
        const char* G_vals_3[1] = {"B"};
        const char* G_vals_4[2] = {"B", "F"};
        const char* G_vals_5[2] = {"C", "E"};
        static void* G_vals[22] = {G_vals_0, G_vals_1, G_vals_2, G_vals_3, G_vals_4, G_vals_5};
        static size_t G_lens[22] = {2, 3, 2, 1, 2, 2};
        size_t G_len = 6;
        MapSL G = { G_keys, G_vals, G_lens, 6, 22 };
        puts(({const char** __tmp2 = breadth_first_search(G, "A"); join(__tmp2, breadth_first_search_len);}));
        puts(({const char** __tmp3 = breadth_first_search_with_deque(G, "A"); join(__tmp3, breadth_first_search_with_deque_len);}));
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
